WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43877
Conditionalize wrong fragment parsing code to pass more HTML5lib tests
https://bugs.webkit.org/show_bug.cgi?id=43877
Summary
Conditionalize wrong fragment parsing code to pass more HTML5lib tests
Adam Barth
Reported
2010-08-11 14:15:13 PDT
Conditionalize wrong fragment parsing code to pass more HTML5lib tests
Attachments
Patch
(5.98 KB, patch)
2010-08-11 14:17 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2010-08-11 14:17:03 PDT
Created
attachment 64159
[details]
Patch
Eric Seidel (no email)
Comment 2
2010-08-11 14:21:14 PDT
Comment on
attachment 64159
[details]
Patch OK. This is ugly, but it's about to get deleted anyway...
WebKit Commit Bot
Comment 3
2010-08-11 19:55:52 PDT
Comment on
attachment 64159
[details]
Patch Clearing flags on attachment: 64159 Committed
r65212
: <
http://trac.webkit.org/changeset/65212
>
WebKit Commit Bot
Comment 4
2010-08-11 19:55:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug