2010-08-11  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        Conditionalize wrong fragment parsing code to pass more HTML5lib tests
        https://bugs.webkit.org/show_bug.cgi?id=43877

        Test progression.

        * html5lib/runner-expected-html5.txt:
2010-08-11  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Conditionalize wrong fragment parsing code to pass more HTML5lib tests
        https://bugs.webkit.org/show_bug.cgi?id=43877

        This code exists to support the LegacyHTMLTreeBuilder.  Unfortunately,
        it causes problems for the new HTMLTreeBuilder (which is more
        self-contained).

        * dom/Element.cpp:
        (WebCore::Element::createContextualFragment):

Canonical link: https://commits.webkit.org/56012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65212 268f45cc-cd09-0410-ab3c-d52691b4dbfc